# multi-framework-agent-evals

./: .gitignore  README.md
frameworks/claude-agent-sdk/quick-start-agent-demo/: README.md  pyproject.toml
frameworks/claude-agent-sdk/quick-start-agent-demo/src/: __init__.py  main.py
frameworks/claude-agent-sdk/quick-start-agent-demo/src/scenarios/: basic_query_math.json  code_generation.json  file_operations_with_tools.json  query_with_system_prompt.json  simple_greeting.json
frameworks/claude-agent-sdk/quick-start-agent-demo/tests/: __init__.py  conftest.py  test_unit.py
frameworks/crewai/landing-page-generator-agent-demo/: README.md  pyproject.toml
frameworks/crewai/landing-page-generator-agent-demo/src/: __init__.py  agents.py  crew.py  runner.py  tasks.py  tools.py
frameworks/crewai/landing-page-generator-agent-demo/src/scenarios/: portfolio_landing.json  saas_landing.json  simple_landing.json
frameworks/crewai/landing-page-generator-agent-demo/templates/basic/: index.html
frameworks/crewai/landing-page-generator-agent-demo/tests/: __init__.py  conftest.py  test_agents.py
frameworks/crewai/meta-quest-knowledge-agent-demo/: README.md  pyproject.toml
frameworks/crewai/meta-quest-knowledge-agent-demo/knowledge/: README.md  meta_quest_guide.txt
frameworks/crewai/meta-quest-knowledge-agent-demo/src/: __init__.py  agents.py  crew.py  runner.py  tasks.py  tools.py
frameworks/crewai/meta-quest-knowledge-agent-demo/src/scenarios/: basic_qa_scenario.json  multi_turn_scenario.json  setup_scenario.json
frameworks/crewai/meta-quest-knowledge-agent-demo/tests/: __init__.py  conftest.py  test_agents.py
frameworks/crewai/unit-test-agent-demo/: .env.example  .gitignore  IMPLEMENTATION_SUMMARY.md  README.md  pyproject.toml
frameworks/crewai/unit-test-agent-demo/scripts/: validate_setup.py
frameworks/crewai/unit-test-agent-demo/src/: __init__.py  __main__.py  agents.py  context.py  crew.py  runner.py  tasks.py  tools.py
frameworks/crewai/unit-test-agent-demo/tests/: __init__.py  conftest.py  test_agents.py  test_context.py  test_crew.py  test_scenarios.py  test_tasks.py  test_tools.py
frameworks/google-adk/llm-fact-check-agent-demo/: README.md  pyproject.toml
frameworks/google-adk/llm-fact-check-agent-demo/src/: __init__.py  agents.py  prompts.py  runner.py
frameworks/google-adk/llm-fact-check-agent-demo/src/scenarios/: accurate_facts.json  disputed_claims.json  inaccurate_facts.json  mixed_accuracy.json
frameworks/google-adk/llm-fact-check-agent-demo/tests/: conftest.py  test_agents.py
frameworks/langchain/open-deep-research-agents-demo/: README.md  pyproject.toml
frameworks/langchain/open-deep-research-agents-demo/src/: __init__.py  agents.py  context.py  manager.py  runner.py  tools.py
frameworks/langchain/open-deep-research-agents-demo/src/scenarios/: comparative_study.json  historical_research.json  market_analysis.json  scientific_study.json  technology_research.json
frameworks/langchain/open-deep-research-agents-demo/tests/: conftest.py  test_agents.py  test_context.py  test_manager.py  test_tools.py
frameworks/langchain/relational-data-agent-demo/: README.md  pyproject.toml
frameworks/langchain/relational-data-agent-demo/src/: __init__.py  agents.py  context.py  database.py  prompts.py  runner.py  tools.py
frameworks/langchain/relational-data-agent-demo/tests/: conftest.py  test_agents.py  test_tools.py
frameworks/openai-agents-sdk/cs-agents-demo/: README.md  pyproject.toml
frameworks/openai-agents-sdk/cs-agents-demo/src/: runner.py  tools.py
frameworks/openai-agents-sdk/cs-agents-demo/tests/: conftest.py  test_agents.py
frameworks/openai-agents-sdk/financial-research-agents-demo/: README.md  pyproject.toml  test_report_company_analysis.json  test_report_competitor_analysis.json  test_report_market_research.json
frameworks/openai-agents-sdk/financial-research-agents-demo/src/: __init__.py  agents.py  manager.py  runner.py  tools.py
frameworks/openai-agents-sdk/financial-research-agents-demo/tests/: __init__.py  conftest.py  test_agents.py
frameworks/pydantic-ai/: README.md  pyproject.toml
frameworks/pydantic-ai/bank-support-agent-demo/: .env.example  README.md  main.py  pyproject.toml  test_structure.py
frameworks/pydantic-ai/bank-support-agent-demo/src/: __init__.py  agents.py  context.py  database_init.py  runner.py  tools.py
frameworks/pydantic-ai/bank-support-agent-demo/tests/: conftest.py  test_agents.py  test_all.py  test_api.py  test_context.py  test_runner.py  test_simple.py  test_structure.py  test_tools.py
frameworks/pydantic-ai/lead-qual-agent-demo/: pyproject.toml
frameworks/pydantic-ai/lead-qual-agent-demo/src/: main.py  run_scenario.py
frameworks/pydantic-ai/lead-qual-agent-demo/tests/: test_models.py
frameworks/pydantic-ai/src/: agents.py  runner.py  tools.py
frameworks/pydantic-ai/src/data/: bank_support.db
frameworks/pydantic-ai/src/scenarios/: authentication_flow.json  transaction_history.json
frameworks/pydantic-ai/tests/: __init__.py  conftest.py  test_agents.py  test_tools.py
frameworks/pydantic/lead-qual-agent-demo/: .gitignore  README.md  env.example  pyproject.toml
frameworks/pydantic/lead-qual-agent-demo/src/: __init__.py  run_scenario.py  test_agent_init.py  test_demo_structure.py  test_scenario.py
frameworks/pydantic/lead-qual-agent-demo/src/agent/: models.py  (+2 more)
frameworks/pydantic/lead-qual-agent-demo/tests/: __init__.py  test_lead_qualifier.py  test_linkup_search.py
observability/langsmith/google-adk/code-debug-agent-demo/: .env.example  README.md  pyproject.toml
observability/langsmith/langchain/static-code-analysis-agent-demo/: .env.example  .gitignore  LANGSMITH_README.md  pyproject.toml
observability/langsmith/openai-agents-sdk/financial-research-agent-demo/: .env.example  README.md  pyproject.toml
tools/agent-instrumentor/: .env.example  README.md  pyproject.toml
tools/agent-instrumentor/src/agent_instrumentor/: __init__.py  main.py
tools/framework-detector/: README.md  pyproject.toml
tools/framework-detector/src/framework_detector/: claude_agent.py
(+210 files in other folders)
