[project]
name = "pydantic-ai-bank-support-demo"
version = "0.1.0"
description = "Bank support agent demo using Pydantic AI framework"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pydantic-ai>=0.0.16",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.28.0",
    "aiosqlite>=0.20.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "black>=24.0.0",
    "ruff>=0.6.0",
    "mypy>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["."]
addopts = "-v --tb=short --strict-markers"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "scenario: Scenario-based tests",
    "slow: Tests that take longer than 5 seconds",
]

[tool.ruff]
line-length = 100
target-version = "py39"
select = ["E", "F", "I", "N", "W"]

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.mypy]
python_version = "3.9"
strict = true
ignore_missing_imports = true