[project]
name = "agent-instrumentor"
version = "0.1.0"
description = "Automatic instrumentation of multi-framework agents with observability platforms"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.42.0",
    "claude-agent-sdk>=0.1.0",
    "jinja2>=3.1.0",
    "black>=24.0.0",
    "tree-sitter>=0.23.2",
    "tree-sitter-python>=0.23.6",
    # Observability platforms
    "langfuse>=2.0.0",
    "arize-phoenix>=4.0.0",
    "ddtrace>=2.14.0",
    "langsmith>=0.1.0",
]

[project.scripts]
agent-instrumentor = "agent_instrumentor.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "mypy>=1.8.0",
]
