[project]
name = "framework-detector"
version = "0.1.0"
description = "Detect AI agent frameworks and versions in Python projects"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.42.0",
    "claude-agent-sdk>=0.1.0",
    "tree-sitter>=0.23.2",
    "tree-sitter-python>=0.23.6",
    "tomli>=2.2.1",
]

[project.scripts]
framework-detector = "framework_detector.main:main"
framework-agent = "framework_detector.claude_agent:cli_entry"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "black>=24.0.0",
    "ruff>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/framework_detector"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"
