[project]
name = "landing-page-generator-agent-demo"
version = "0.1.0"
description = "CrewAI Landing Page Generator Agent Demo - Automated landing page generation using multi-agent collaboration"
readme = "README.md"
authors = [
    { name = "robert-moyai", email = "robert@moyai.ai" }
]
requires-python = ">=3.10,<3.12"
dependencies = [
    "crewai>=0.70.0",
    "crewai-tools>=0.8.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.10.0",
    "openai>=1.0.0",
    "beautifulsoup4>=4.12.0",
    "requests>=2.31.0",
    "jinja2>=3.1.0",
]

[project.scripts]
landing-page-generator = "src.runner:main"

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.26.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.14.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
markers = [
    "integration: mark test as an integration test",
    "unit: mark test as a unit test",
]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 120
select = ["E", "W", "F", "I", "N", "B", "ARG", "SIM", "C4"]
ignore = ["E501"]
exclude = [".venv", "venv", "__pycache__", ".pytest_cache", "templates"]

[tool.pyright]
pythonVersion = "3.10"
venvPath = "."
venv = ".venv"
exclude = ["**/__pycache__", ".venv", "templates"]