[project]
name = "financial-research-agents-demo"
version = "0.1.0"
description = "OpenAI Agents SDK Financial Research Multi-Agent Demo"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "openai-agents>=0.1.0",
    "pydantic>=2.0.0",
    "jsonschema>=4.0.0",
    "typing-extensions>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]
