[project]
name = "static-code-analysis-agent-demo"
version = "0.1.0"
description = "LangGraph ReAct agent for static code analysis using GitHub MCP and OpenGrep with LangSmith observability"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "Static Analysis Agent Team", email = "team@example.com"},
]
dependencies = [
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-community>=0.3.0",
    "langsmith>=0.2.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "jsonschema>=4.0.0",
    "typing-extensions>=4.0.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "black>=24.0.0",
    "ruff>=0.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["."]
addopts = "-v --tb=short --strict-markers -p no:logfire"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "scenario: Scenario-based tests",
    "slow: Tests that take a long time to run",
]

[tool.ruff]
line-length = 100
target-version = "py311"
select = [
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "I",  # isort
    "N",  # pep8-naming
    "W",  # pycodestyle warnings
]

[tool.black]
line-length = 100
target-version = ["py311"]
