[project]
name = "financial-research-agents-demo-langsmith"
version = "0.1.0"
description = "OpenAI Agents SDK Financial Research Multi-Agent Demo with LangSmith Tracing"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai-agents>=0.1.0",
    "pydantic>=2.0.0",
    "jsonschema>=4.0.0",
    "typing-extensions>=4.0.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "langsmith>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
markers = [
    "unit: Unit tests that don't require external dependencies",
    "integration: Integration tests that require API keys",
]
# Default to running only unit tests
addopts = "-v -m 'not integration'"
testpaths = ["tests"]
